fix: add missing dark mode colors

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -77,6 +77,8 @@
 		--border-success: 142 76% 36%;
 		--border-warning: 30.66, 97.16%, 72.35%;
 		--border-destructive: 0 91% 71%;
+		--border-sky: 194 90% 62%;
+		--border-green: 143 77% 87%;
 		--border-hover: 240, 5%, 34%;
 		--overlay-default: 240 10% 4% / 80%;
 		--highlight-purple: 252 95% 85%;
